2006-09-20  David Kastrup  <dak@gnu.org>

	* menu-bar.el (clipboard-yank): bomb out in interactive use if
	buffer is read-only.

2006-09-18  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-unprotected): Let inhibit-read-only only when
	buffer-read-only isn't set.
	(allout-annotate-hidden): Enable topic annotation during copies even
	when the buffer is read-only, eg for topic copies.  Ensure that the loop
	advances, even when the span extends beyond the	deletion region.
	(allout-toggle-subtree-encryption): Use	allout-structure-added-hook
	rather than allout-exposure-changed-hook, as a stronger assertion.
	(allout-keybindings-list): Add bindings for
	allout-copy-line-as-kill and allout-copy-topic-as-kill.
	(allout-copy-line-as-kill, allout-copy-topic-as-kill): copy
	wrappers for allout-kill-line and allout-kill-topic.
	(allout-listify-exposed): Position correctly to accumulate lines.

2006-09-19  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-1): Escape field boundaries occurring
	exactly at point.  Update goal column if constrained to a field.
	(line-move-finish): Escape field boundaries occurring exactly at
	point.

2006-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (mouse-on-link-p): Tentatively fix last change.
	(mouse-drag-vertical-line): Remove unused var `wconfig'.

2006-09-19  Kim F. Storm  <storm@cua.dk>

	* help.el (describe-key-briefly, describe-key): Simplify printing
	of descriptions by using format and %S.  Fix "is undefined"
	messages to say "at that spot" for mouse events.

	* simple.el (line-move-partial): Optimize.  Try window-line-height
	before posn-at-point to get vpos of current line.

2006-09-18  Michael Kifer  <kifer@cs.stonybrook.edu>

	* viper.el: Bump up version/date of update to reflect the substantial
	changes done in August 2006.

	* viper-cmd (viper-next-line-at-bol): Make sure button-at, push-button
	are defined.

	* ediff-util.el (ediff-add-to-history): New function.
